--- a/www/app/templates/others/dashboard.html
+++ b/www/app/templates/others/dashboard.html
@@ -13,6 +13,7 @@
 				<div class="row col padding">
 					<!--<h4 style="text-transform: capitalize; text-align: center">{{current.title}}</h4>-->
 					<p style=" line-height:25px; padding: 5px 15px 5px 15px;" ng-bind-html="current.message"></p>
+					<p style="padding: 5px 15px 20px 15px;"></p>
 				</div>
 			</section>
 		</ion-content>
