--- a/www/app/templates/others/dashboard.html
+++ b/www/app/templates/others/dashboard.html
@@ -26,7 +26,7 @@
 				<ion-content>
 					<div class="row">
 						<div class="col padding text-center">
-							<a class=" button icon ion-ios-calendar button-assertive" ion-datetime-picker date ng-model="row.appDate"> Pick a Date</a>
+							<a class=" button icon ion-ios-calendar button-calm" ion-datetime-picker date ng-model="row.appDate"> Pick a Date</a>
 						</div>
 					</div>
 					<div class="row">
@@ -48,17 +48,17 @@
 
 	</ion-pane>
 
-	<div class="tabs-striped tabs-color-light tabs-background-calm" style="padding: 0">
+	<div class="tabs-striped tabs-color-dark tabs-background-stable" style="padding: 0;">
 		<div class="tabs">
 			<a class="tab-item " ng-click="openPopover($event)">
-				<i class="icon ion-ios-calendar-outline" style="color: white"></i>
+				<i class="icon ion-ios-calendar-outline"></i>
 				Grossary
 			</a>
-			<a class="tab-item"  ng-click="decrease()" style="color: white">
+			<a class="tab-item"  ng-click="decrease()">
 				<i class="icon ion-minus-round"></i>
 				Decrease
 			</a>
-			<a class="tab-item" ng-click="increase()" style="color: white">
+			<a class="tab-item" ng-click="increase()">
 				<i class="icon ion-plus-round"></i>
 				Increase
 			</a>
