--- a/www/app/assets/css/custom-app.css
+++ b/www/app/assets/css/custom-app.css
@@ -1,10 +1,3 @@
-.loginBg{
-    background: #1c2627 url(../images/nature.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
 .header {
     padding-bottom: 20px;
 }
@@ -25,25 +18,21 @@ img {
 
 
 
-
-
-
-
 .custom {
-    background-color:rgba(58,113,165,0.76) !important;
+    background-color:white !important;
 }
 .custom .item {
     background-color: transparent;
     border:none;
-    border-top: 1px solid;
-    border-bottom:1px solid;
+    border-top: 0px solid;
+    border-bottom:0px solid;
     border-color:#6cb5d9;
 ;
     color: white;
 }
 
 .custom .item:last-child {
-    border-bottom: 1px solid #6cb5d9;
+    border-bottom: 1px solid #e4e5e7;
 }
 
 .custom .item-complex .item-content, .dark .item-radio .item-content {
@@ -53,18 +42,22 @@ img {
 .custom h3,
 .custom p,
 .custom a {
-    color: white;
+    color: slategrey;
 }
 
 .header-bg{
-    background: #076187 url(../images/userbg.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background: #fb7738 !important;
 }
-.bar-balanced{
-    background-color:#08729B;
+.calm-bg{
+    background-color:#fb7738 !important;
+    color: white;
+}
+.bar-calm{
+    background-color:#fb7738 !important;
+    color: white;
+}
+.button-calm{
+    background-color:#fb7738 !important;
     color: white;
 }
 /*round*/
@@ -116,3 +109,24 @@ item-avatar i:first-child, .item-avatar .item-img {
 .font-size-20 *{
     font-size: 20px;
 }
+
+ion-item.Purple a.item-content{background-color: #e1bee7;}
+ion-item.Blue a.item-content{background-color: #bbdefb;}
+ion-item.Green a.item-content{background-color: #b9f6ca;}
+ion-item.Orange a.item-content{background-color: #ffe0b2;}
+ion-item.Brown a.item-content{background-color: #d7ccc8;}
+ion-item.Yellow a.item-content{background-color: #fff9c4;}
+.Purple{background-color: #e1bee7;}
+.Blue{background-color: #bbdefb;}
+.Green{background-color: #b9f6ca;}
+.Orange{background-color: #ffe0b2;}
+.Brown{background-color: #d7ccc8;}
+.Yellow{background-color: #fff9c4;}
+ion-item.isDone h2{text-decoration: line-through;}
+.button.button-dark{align-items: center;justify-content: center;}
+.bar .title{color: #EF473A;}
+ion-item.item-remove-animate{border: transparent;}
+label.item.item-input.input-textarea textarea {background: transparent;line-height: 35px;}
+label.item.item-input.input-textarea {background:rgba(90,178,250,0.07);background-size: 100% 35px;}
+ion-item.item-remove-animate.notes .item-content{background: rgba(158, 158, 158, 0.1);}
+span.icon.ion-ios-close-empty {color: #ef473a;}
