--- a/www/app/templates/others/menu.html
+++ b/www/app/templates/others/menu.html
@@ -14,38 +14,36 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" class="calm-bg">
     <ion-content class="custom">
       <ion-list>
         <ion-item class="heading-item item item-avatar header-bg" nav-clear menu-close ui-sref="app.profile" >
 
           <p><img class="user-image" ng-src="app/assets/images/icon.png" spinner-on-load></p>
 
-
-          <h2 class="text-center">Baptist</h2>
-          <p class="text-center">Sunday School Lessons</p>
+          <h2 class="text-center" style="color: white">Baptist Convention</h2>
+          <p class="text-center" style="color: white">Sunday School Lessons 2018</p>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.dashboard">
           <i class="icon ion-ios-calendar-outline"></i>
-          <h2 class="menu-text">Dashboard</h2>
+          <h2 class="menu-text">Lessons</h2>
         </ion-item>
-        <ion-item>
-          <h2 class="text-left">About Us</h2>
-          <p>This app was prepared and produced <br>by the Publications Department, <br>Nigerian Baptist Convention, <br>P.M.B, 5113, Ibadan, <br>Oyo State, Nigeria.<br><br>Copyright 2018. <br> All Rights Reserved.</p>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="tab.todos">
+          <i class="icon ion-clipboard"></i>
+          <h2 class="menu-text">To do</h2>
         </ion-item>
-       <!--
-       <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard/lang/english">
-          <h2 class="menu-text text-center">About Us</h2>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="tab.notes">
+          <i class="icon ion-compose"></i>
+          <h2 class="menu-text">NotePad</h2>
         </ion-item>
-       <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard/yoruba">
-          <i class="icon ion-medkit"></i>
-          <h2 class="menu-text">Yoruba</h2>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.aboutus">
+          <i class="icon ion-home"></i>
+          <h2 class="menu-text">About Us</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard/hausa">
-          <i class="icon ion-medkit"></i>
-          <h2 class="menu-text">Hausa</h2>
-        </ion-item>-->
-
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.contactus">
+          <i class="icon ion-location"></i>
+          <h2 class="menu-text">Contact Us</h2>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
