--- a/www/app/templates/forms/Add.html
+++ b/www/app/templates/forms/Add.html
@@ -1,37 +1,34 @@
 <form name="HTSSignup">
-    <ion-view view-title="Book Appointment">
+    <ion-view view-title="Book Appointment" cache-view="false">
         <ion-content class="padding">
 
             <div class="row responsive-sm padding remvoeBP">
                 <div class="col">
                     <div class="list">
-                        <input type="hidden" ng-model="data.post_type" name="post_type" >
-                        <input type="hidden" ng-model="data.post_status" name="post_status" >
-                        <input type="hidden" ng-model="data.post_image" name="post_image">
 
                         <h4 class="text-center">Want to have a discussion with the church management? Book an appointment right away.</h4>
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Name</span>
-                            <input type="text" ng-model="data.post_title" name="post_title" placeholder="Enter your name" required>
+                            <input type="text" ng-model="data.name" name="name" placeholder="Enter your name" required="required">
                         </label>
 
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Phone</span>
-                            <input type="text" ng-model="data.phone" name="phone" placeholder="Enter your phone number" required>
+                            <input type="text" ng-model="data.phone" name="phone" placeholder="Enter your phone number" required="required">
                         </label>
 
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Email</span>
-                            <input type="text" ng-model="data.post_link" name="post_link" placeholder="example@gmail.com" required>
+                            <input type="email" ng-model="data.email" name="email" placeholder="example@gmail.com" required="required">
                         </label>
 
                         <label class="item item-input item-stacked-label">
-                            <span class="input-label">Description</span>
-                            <textarea ng-model="data.post_description" name="post_description" placeholder="Description"></textarea>
+                            <span class="input-label">Reason for appointment</span>
+                            <textarea ng-model="data.message" rows="10" name="message" placeholder="Description appointment details"></textarea>
                         </label>
                     </div>
 
-                    <div class="loginButton"><button class="button ion-person button-block button-calm" ng-click="iWitnessForm()"> Submit </button>  </div>
+                    <div class="loginButton"><button class="button ion-person button-block button-calm" ng-click="ProcessForm()"> Submit </button>  </div>
                 </div>
             </div>
 
