--- a/www/app/templates/forms/Add2.html
+++ b/www/app/templates/forms/Add2.html
@@ -1,18 +1,14 @@
 <form name="HTSSignup">
-    <ion-view view-title="Prayer Request">
+    <ion-view view-title="Prayer Request" cache-view="false">
         <ion-content class="padding">
 
             <div class="row responsive-sm padding remvoeBP">
                 <div class="col">
                     <div class="list">
-                        <input type="hidden" ng-model="data.post_type" name="post_type" >
-                        <input type="hidden" ng-model="data.post_status" name="post_status" >
-                        <input type="hidden" ng-model="data.post_image" name="post_image">
-
                         <h4 class="text-center">Please complete the below and send us your request.</h4>
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Name</span>
-                            <input type="text" ng-model="data.post_title" name="post_title" placeholder="Enter your name" required>
+                            <input type="text" ng-model="data.name" name="name" placeholder="Enter your name" required>
                         </label>
 
                         <label class="item item-input item-stacked-label">
@@ -22,16 +18,16 @@
 
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Email</span>
-                            <input type="text" ng-model="data.post_link" name="post_link" placeholder="example@gmail.com" required>
+                            <input type="email" ng-model="data.email" name="email" placeholder="example@gmail.com" required>
                         </label>
 
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Prayer points</span>
-                            <textarea ng-model="data.post_description" rows="10" name="post_description" placeholder="List your prayer points here."></textarea>
+                            <textarea ng-model="data.message" rows="10" name="message" placeholder="List your prayer points here."></textarea>
                         </label>
                     </div>
 
-                    <div class="loginButton"><button class="button button-block button-calm" ng-click="iWitnessForm()"> Send your request </button>  </div>
+                    <div class="loginButton"><button class="button button-block button-calm" ng-click="ProcessForm()"> Send your request </button>  </div>
                 </div>
             </div>
 
