--- a/www/app/templates/others/menu.html
+++ b/www/app/templates/others/menu.html
@@ -36,15 +36,15 @@
           <i class="icon ion-compose"></i>
           <h2 class="menu-text">NotePad</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.news">
+       <!-- <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.news">
           <i class="icon ion-android-globe"></i>
           <h2 class="menu-text">News</h2>
-        </ion-item>
+        </ion-item>-->
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.events">
           <i class="icon ion-ios-calendar"></i>
-          <h2 class="menu-text">Events</h2>
+          <h2 class="menu-text">Baptist Events</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.iwitnessadd">
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.appointment">
           <i class="icon ion-ios-book"></i>
           <h2 class="menu-text">Book Appointment</h2>
         </ion-item>
